feat: tutorial deployed

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Responsive Portfolio Tutorial",
   "main": "index.js",
+  "homepage": "https://sjoseph11236.github.com/sass-tutorial",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -15,8 +17,8 @@
   "bugs": {
     "url": "https://github.com/sjoseph11236/sass-tutorial/issues"
   },
-  "homepage": "https://github.com/sjoseph11236/sass-tutorial#readme",
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1"
   }
 }
