chore: small change

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Responsive Portfolio Tutorial",
   "main": "index.js",
-  "homepage": "https://sjoseph11236.github.com/sass-tutorial",
+  "homepage": "https://sjoseph11236.github.io/sass-tutorial",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
